<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".ui.MovieDetailsActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:textSize="12sp"
                app:contentScrim="?attr/backgroundColor"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_collapseMode="parallax">

                    <ImageView
                        android:id="@+id/image_movie_bg_details"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_play"
                        app:layout_collapseMode="parallax" />

                    <ImageView
                        android:id="@+id/image_movie_details"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="24dp"
                        android:layout_marginBottom="24dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_play"
                        app:layout_constraintBottom_toBottomOf="@+id/image_movie_bg_details"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/image_movie_bg_details"
                        app:layout_constraintTop_toTopOf="@+id/image_movie_bg_details" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar_details"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:backgroundTint="@android:color/transparent"
                    app:layout_collapseMode="pin" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp">

                <LinearLayout
                    android:id="@+id/container_movie_information"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/text_title_movie"
                        style="@style/DesafioMobileTextView.Large.Bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Harry Potter" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_open_trailer"
                        style="@style/DesafioMobileButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/button_open_trailer_text"
                        android:textColor="@color/black"
                        android:visibility="gone"
                        app:icon="@drawable/ic_play"
                        app:iconGravity="textStart"
                        app:iconTint="@color/black" />

                    <TextView
                        android:id="@+id/text_view_premier_date"
                        style="@style/DesafioMobileTextView.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:textColor="@color/yellow"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_title_movie"
                        tools:text="01/2020/10" />

                    <TextView
                        android:id="@+id/text_view_synopsis"
                        style="@style/DesafioMobileTextView.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_title_movie"
                        tools:text="Quando dois ladrões invadem sua casa no subúrbio uma noite, Hutch se recusa a defender a si mesmo ou a sua família, na esperança de evitar violência grave. Seu filho adolescente, Blake, está desapontado com ele e sua esposa, Becca, parece se afastar ainda mais.\nEm consequência, o incidente acerta a raiva latente de Hutch, desencadeando instintos adormecidos e impulsionando-o em um caminho brutal que revelará segredos obscuros e habilidades letais. Em uma enxurrada de socos, tiros e pneus cantando, Hutch deve salvar sua família de um adversário perigoso e garantir que ele nunca será subestimado como anônimo novamente." />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:background="#52ffffff" />

                    <TextView
                        android:id="@+id/text_view_genres"
                        style="@style/DesafioMobileTextView.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/genres_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_view_synopsis" />

                    <TextView
                        android:id="@+id/text_view_cast"
                        style="@style/DesafioMobileTextView.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/cast_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_view_synopsis" />

                    <TextView
                        android:id="@+id/text_view_director"
                        style="@style/DesafioMobileTextView.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/director_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_view_cast" />

                    <TextView
                        android:id="@+id/text_view_distributor"
                        style="@style/DesafioMobileTextView.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/distribuidor_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_view_cast" />

                    <TextView
                        android:id="@+id/text_view_country"
                        style="@style/DesafioMobileTextView.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/country_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_view_cast" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>